--- a/public/css/posts/individual_post.css
+++ b/public/css/posts/individual_post.css
@@ -91,7 +91,7 @@
   border-radius: 5px;
 }
 
-.container-comment {
+.comment-section {
   max-width: 900px;
   margin: 50px auto;
   background-color: #fff;
@@ -116,6 +116,18 @@
 .comment-body {
   margin-top: 10px;
 }
+
+.comment-list {
+  max-height: 800px;
+  overflow-y: auto;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+}
+
+
+
 
 
 
