--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,61 +21,61 @@ body {
     margin: 1em;
     justify-self: center;
   }
-  #cards {
+  #posts {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
   }
-  #cards article.card {
+  #posts article.post {
     display: flex;
     flex-direction: column;
     background-color: #d3edc3;
     padding: 1em;
     margin: 1em;
   }
-  #cards article.card header {
+  #posts article.post header {
     display: flex;
     align-items: center;
   }
-  #cards article.card header h2 {
+  #posts article.post header h2 {
     flex-grow: 1;
   }
-  #cards article.card header a.delete {
+  #posts article.post header a.delete {
     display: none;
     font-size: 2.6rem;
     margin-top: .5rem;
     margin-bottom: 2.5rem;
     line-height: 1.25;
   }
-  #cards article.card header:hover a.delete {
+  #posts article.post header:hover a.delete {
     display: inline;
   }
-  #cards article.card li {
+  #posts article.post li {
     list-style-type: none;
   }
-  #cards article.card li label {
+  #posts article.post li label {
     display: flex;
     align-items: baseline;
   }
-  #cards article.card li label span {
+  #posts article.post li label span {
     margin-left: .5em;
     flex-grow: 1;
   }
-  #cards article.card li label a {
+  #posts article.post li label a {
     display: none;
   }
-  #cards article.card li label:hover a {
+  #posts article.post li label:hover a {
     display: inline;
   }
-  #cards article.card input:checked + span {
+  #posts article.post input:checked + span {
     text-decoration: var(--primary-color) solid line-through;
   }
-  #cards article.card ul {
+  #posts article.post ul {
     margin: 0;
   }
-  #cards article.card form {
+  #posts article.post form {
     margin: 0;
   }
-  #cards article.card input[type=text] {
+  #posts article.post input[type=text] {
     background-color: white;
     margin: 0;
   }
@@ -100,7 +100,7 @@ body {
     background-color: white;
   }
   @media (max-width: 70em) {
-    #cards {
+    #posts {
       grid-template-columns: repeat(2, 1fr);
     }
     main > header {
@@ -112,7 +112,7 @@ body {
     }
   }
   @media (max-width: 40em) {
-    #cards {
+    #posts {
       grid-template-columns: 1fr;
     }
   }
@@ -131,7 +131,7 @@ body {
       margin: 0;
       max-width: 25em;
     }
-    article.card {
+    article.post {
       margin: 0;
       border-bottom: 1px solid rgba(96, 108, 118, 0.4);
     }
