--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22,15 +22,28 @@ body {
     justify-self: center;
   }
   #posts {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     grid-template-columns: repeat(3, 1fr);
+    margin-left: 6em;
+    margin-right: 6em;
   }
+
+  #create_new_post {
+    display: flex;
+    background-color: #d3edc3;
+    padding: 1em;
+    margin: 1em;
+    border-radius: 0.8em;
+  }
+
   #posts article.post {
     display: flex;
     flex-direction: column;
     background-color: #d3edc3;
     padding: 1em;
     margin: 1em;
+    border-radius: 0.8em;
   }
   #posts article.post header {
     display: flex;
