--- a/public/css/app.css
+++ b/public/css/app.css
@@ -89,8 +89,11 @@ body {
     margin: 0;
   }
   #posts article.post input[type=text] {
-    background-color: white;
+    background-color: transparent;
     margin: 0;
+    border-top: transparent;
+    border-left: transparent;
+    border-right: transparent;
   }
   #content label {
     font-weight: normal;
@@ -113,9 +116,11 @@ body {
     background-color: white;
   }
 
-  #votes {
+  div.votes {
     text-align: right;
+    margin-bottom: 1em;
   }
+
   @media (max-width: 70em) {
     #posts {
       grid-template-columns: repeat(2, 1fr);
