--- a/public/css/app.css
+++ b/public/css/app.css
@@ -37,6 +37,15 @@ body {
     border-radius: 0.8em;
   }
 
+  #newPostForm {
+    display: flex;
+    flex-direction: column;
+    background-color: #d3edc3;
+    padding: 1em;
+    margin: 1em;
+    border-radius: 0.8em;
+  }
+
   #posts article.post {
     display: flex;
     flex-direction: column;
