--- a/public/css/app.css
+++ b/public/css/app.css
@@ -35,6 +35,8 @@ body {
     padding: 1em;
     margin: 1em;
     border-radius: 0.8em;
+    margin-left: 6em;
+    margin-right: 6em;
   }
 
   #posts article.post {
