fix buttons in header

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -192,39 +192,19 @@ body {
     color: #4d5cca;
   }
 
-  #admin_button {
-    display: flex;
-    background-color: #4d5cca;
-    padding: 1em;
-    margin: 1em;
-    border-radius: 0.8em;
-    vertical-align: center;
-  }
-
-  #logout_button {
-    display: flex;
-    background-color: #4d5cca;
-    padding: 1em;
-    margin: 1em;
-    border-radius: 0.8em;
-    vertical-align: middle;
-  }
-
-  #profile_button {
-    display: flex;
-    background-color: #4d5cca;
-    padding: 1em;
-    margin: 1em;
-    border-radius: 0.8em;
-    vertical-align: center;
-
-  }
-
   #buttons {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    text-align: center;
+    align-content: center;
+  }
+
+  #admin_button, #logout_button, #profile_button {
+    display: flex;
+    background-color: #4d5cca;
+    margin: 1em;
+    border-radius: 8px;
+    vertical-align: middle;
   }
 
   input[type=text]:focus,
