--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,14 +21,17 @@ body {
     margin: 1em;
     justify-self: center;
   }
-  #posts, #create_post {
+  #content {
     display: flex;
     flex-direction: column;
     grid-template-columns: repeat(3, 1fr);
     margin-left: 6em;
     margin-right: 6em;
   }
-
+  #create_post {
+    display: flex;
+    flex-direction: column;
+  }
   .create_new_post {
     display: flex;
     background-color: #c3dded;
@@ -428,7 +431,6 @@ body {
 .features,
 .join,
 .contacts {
-    margin-left: 40px;
-    margin-right: 40px;
+  margin: 1em 0;
 }
 
